<resources>
    <string name="app_name">Delivery Route</string>
    <string name="title_activity_login">Delivery Route</string>
    <string name="title_activity_register">Register Screen</string>
    <string name="title_activity_orders">Orders Screen</string>
    <string name="title_activity_route">Route Screen</string>
    <string name="title_activity_result">Result Screen</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_repeat_email">Email Repeat</string>
    <string name="prompt_password">Password</string>
    <string name="action_login">Login</string>
    <string name="action_login_short">Login</string>
    <string name="action_register">Register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Content description -->
    <string name="driver_image_cd">Driver Image</string>
    <string name="order_name_cd">Order Name</string>
    <string name="order_image_cd">Order Image</string>
    <string name="order_distance_cd">Order Distance</string>
    <string name="order_selection_cd">Order Selection</string>

    <!-- Login -->
    <string name="email_cd">Enter Your Email</string>
    <string name="password_cd">Enter Your Password</string>
    <string name="login_cd">Login</string>
    <string name="go_to_register_cd">Go To Register New User Screen</string>
    <string name="register_cd">Register New User</string>

    <!-- Register -->
    <string name="email_repeat_cd">Repeat Email</string>


    <!-- Order Activity -->
    <string name="hello">Hello, </string>

    <!-- Route Activity -->
    <string name="is_delivered">Delivered ?</string>

    <!-- Result Activity -->
    <string name="delivery_completed">Delivery Completed</string>
    <string name="in">in</string>
    <string name="minutes">minutes</string>

    <!-- Other -->
    <string name="what">\???</string>
    <string name="please_select_order">Please Select Order</string>

    <!-- Log messages -->
    <string name="order_clicked">Order Clicked</string>
    
    <!-- Map -->
    <string name="map_permission_message">You must enable location</string>



</resources>
